Update for caps rendering issues

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("Images/weeseelectricmain.jpg"),url("images/BlueSky.seamless.png");
+  background-image: url("Images/WeeseElectricMain.jpg"),url("Images/BlueSky.seamless.png");
   background-color: grey;
   background-repeat: no-repeat,repeat;
   background-size: cover,cover;
