--- a/mystyle.css
+++ b/mystyle.css
@@ -24,20 +24,20 @@ position: fixed;
 
 
 contactinfo {
-  font-size: 20px;
+  font-size: 24px;
   text-align: right;
-  color: blACK;
+  color: black;
     right: auto;
- text-shadow: 0px 0px 4px white;
+ text-shadow: 0px 0px 10px silver;
  font-weight:bold;
 
 }
 
 DIV {
   text-align: right;
-  font-size: 20px;
-  color: blACK;
+  font-size: 24px;
+  color: black;
   right: auto;
- text-shadow: 0px 0px 4px white;
+ text-shadow: 0px 0px 10px silver;
  font-weight:bold;
 }
